# PantryPal

./: .gitignore  README.md  commitlint.config.js  package.json
.husky/: pre-commit
ai/: RELEASE.md  cliff.toml  pyproject.toml
backend/: RELEASE.md  cliff.toml  pyproject.toml
backend/models/: ai_request_log.py  base.py  inventory.py  meal_plan.py  recipe.py  shopping_list.py  user.py  user_recipe_history.py
frontend/: RELEASE.md  cliff.toml  pyproject.toml
mobile/: .versionrc.json  README.md  RELEASE.md  app.json  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  meal-plan.tsx  pantry.tsx  profile.tsx
mobile/app/auth/: forgot-password.tsx  index.tsx  login.tsx  otp.tsx  signup-email.tsx  signup-phone.tsx
mobile/app/onboarding/: slides.tsx
mobile/app/onboarding/kitchen/: step-dietary.tsx  step-household.tsx  step-ingredients.tsx  step-utensils.tsx
mobile/app/recipe/: [id].tsx
mobile/app/recipe-generator/: confirm-ingredients.tsx  results.tsx
mobile/components/: recipe-generator-sheet.tsx  themed-text.tsx  themed-view.tsx
mobile/components/ui/: bottom-sheet.tsx  button.tsx  collapsible.tsx  input.tsx  kitchen-progress.tsx  progress-dots.tsx  recipe-card.tsx  screen-header.tsx  tag.tsx
mobile/constants/: theme.ts
mobile/hooks/: use-theme-color.ts
mobile/scripts/: app-json-updater.js  sync-app-version.js
mobile/store/: app-store.ts
scripts/: release-python.js
