[project]
name = "pantrypal-frontend"
version = "0.1.0"
description = "PantryPal admin dashboard — React + Vite web frontend"
requires-python = ">=3.11"
dependencies = []

[tool.bumpversion]
current_version = "0.1.0"
commit = false
tag = false
allow_dirty = true

[[tool.bumpversion.files]]
filename = "VERSION"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
